--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <section class="heroimg">
         <div class="content">
             <img class="mm" src="../UX_UI_HW_17/images/headshot.png">
+            <h1>Goblet Consulting</h1>
             <p>Highly accomplished Technology Startup Executive with over 15 years of experience, demonstrating exceptional leadership skills in Sales, Customer Success, and Operations. Proven track record of building and nurturing top-performing leaders and teams to drive organizational growth and success. </p>
             <button>Download Resume</button>
         </div>
